# databricks-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.snippet.json  export_sqlite_to_csv.py  pyproject.toml  setup.sh  sqlite_to_databricks.py  sqllite_export.sh  upload_sqlite.py
src/databricks_mcp/: __init__.py  config.py  server.py
src/databricks_mcp/client/: __init__.py  base.py  mock.py  real.py
src/databricks_mcp/tools/: __init__.py  catalog.py  clusters.py  dbfs.py  jobs.py  sql.py
tests/: test_all.py
zepz_csvs/: customers.csv  disclosures.csv  transactions.csv  violations.csv
